@@ -4,7 +4,7 @@
 
 pkgname=subversion
 pkgver=1.6.6
-pkgrel=2
+pkgrel=3
 pkgdesc="Replacement for CVS, another versioning system (svn)"
 arch=('i686' 'x86_64')
 license=('apache' 'bsd')
@@ -20,7 +20,7 @@ backup=('etc/xinetd.d/svn' 'etc/conf.d/svnserve')
 url="http://subversion.tigris.org/"
 provides=('svn')
 options=('!makeflags' '!libtool')
-optdepends=('gnome-keyring' 'kdeutils-kwallet')
+optdepends=('gnome-keyring' 'kdeutils-kwallet' 'bash-completion: for svn bash completion')
 
 build() {
    cd ${srcdir}/${pkgname}-${pkgver}
@@ -68,6 +68,10 @@ build() {
    #install -m 755 ${srcdir}/subversion-$pkgver/contrib/client-side/svnmerge/svnmerge.py ${pkgdir}/usr/bin/svnmerge
    install -m 755 ${srcdir}/svnmerge.py ${pkgdir}/usr/bin/svnmerge
    install -D -m 644 ${srcdir}/subversion-$pkgver/COPYING ${pkgdir}/usr/share/licenses/$pkgname/LICENSE
+
+   #bash completion
+   install -Dm 644 ${srcdir}/${pkgname}-${pkgver}/tools/client-side/bash_completion ${pkgdir}/etc/bash_completion.d/subversion || return 1
+
 }
 md5sums=('e5109da756d74c7d98f683f004a539af'
          'a2b029e8385007ffb99b437b30521c90'
